--- a/frontend_user/src/components/BottomBar/BottomBar.module.css
+++ b/frontend_user/src/components/BottomBar/BottomBar.module.css
@@ -3,6 +3,8 @@
   bottom: 0;
   left: 0;
   right: 0;
+  width: 100%;
+  max-width: 100vw;
   height: 68px;
   background-color: #FFFFFF;
   padding: 12px 16px;
@@ -10,6 +12,7 @@
   justify-content: space-between;
   align-items: center;
   z-index: 100;
+  box-sizing: border-box;
   /* Drop shadow effect */
   box-shadow: 0px -4px 20px rgba(0, 0, 0, 0.08);
   /* Background blur */
