--- a/frontend_user/src/components/MonthHistory/MonthHeader.module.css
+++ b/frontend_user/src/components/MonthHistory/MonthHeader.module.css
@@ -7,8 +7,11 @@
   justify-content: space-between;
   align-items: center;
   height: 74px;
-  padding: 16px 16px 24px 16px;
+  padding: 16px 8px 24px 8px;
   background-color: #FFFFFF;
+  width: 100%;
+  max-width: 100vw;
+  box-sizing: border-box;
 }
 
 .title {
