--- a/frontend_user/src/components/MonthHistory/MonthHeader.module.css
+++ b/frontend_user/src/components/MonthHistory/MonthHeader.module.css
@@ -1,5 +1,8 @@
 /**
  * MonthHeader styles - matches Figma design
+ * Width: 393px (responsive)
+ * Height: 74px
+ * Padding: 16px (top), 16px (right), 24px (bottom), 16px (left)
  */
 
 .header {
@@ -7,8 +10,8 @@
   justify-content: space-between;
   align-items: center;
   height: 74px;
-  padding: 16px 8px 24px 8px;
-  background-color: #FFFFFF;
+  padding: 16px 16px 24px 16px;
+  background-color: transparent;
   width: 100%;
   max-width: 100vw;
   box-sizing: border-box;
@@ -45,8 +48,11 @@
 }
 
 .monthName {
-  font-size: 16px;
-  font-weight: 500;
+  font-family: 'Assistant', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 0px;
   color: #212529;
   min-width: 80px;
   text-align: center;
