--- a/frontend_user/src/components/MonthHistory/MonthHistoryPage.module.css
+++ b/frontend_user/src/components/MonthHistory/MonthHistoryPage.module.css
@@ -14,13 +14,14 @@
 .content {
   flex: 1;
   padding: 8px;
-  padding-bottom: 80px; /* Space for bottom bar */
+  padding-bottom: 76px; /* Space for bottom bar */
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
   max-width: 100vw;
   box-sizing: border-box;
+  gap: 0;
 }
 
 .loaderContainer {
@@ -28,7 +29,8 @@
 }
 
 .accordionContainer {
-  margin-top: 8px;
+  margin-top: 0;
+  margin-bottom: 0;
   width: 100%;
   max-width: 361px;
 }
