handle the dates in the cards

--- a/frontend_user/src/components/MonthHistory/DayAccordionItem.module.css
+++ b/frontend_user/src/components/MonthHistory/DayAccordionItem.module.css
@@ -24,7 +24,7 @@
 
 .dateText {
   direction: ltr !important;
-  unicode-bidi: bidi-override !important;
+  unicode-bidi: embed !important;
   text-align: left !important;
 }
 
