--- a/frontend_admin/src/styles/components/DeleteAssignmentModal.css
+++ b/frontend_admin/src/styles/components/DeleteAssignmentModal.css
@@ -1,5 +1,5 @@
 .delete-assignment-modal-content {
-  border-radius: '12px';
+  border-radius: 12px;
   width: calc((100vw - 320px) / 3);
   max-width: 500px;
   min-width: 400px;
